name:                error-cgi
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MichaeGon/error-cgi#README
license:             MIT
license-file:        LICENSE
author:              MichaeGon
maintainer:          MichaeGon
copyright:           2016 MichaeGon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable index.cgi
  hs-source-dirs:    src
  main-is:           index.hs
  -- other-modules:
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5, cgi, filepath, random, html, mtl

executable jump.cgi
  hs-source-dirs:    src
  main-is:           jump.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5, cgi, filepath, random, html
